# YamahaCodingProject_AutonomySoftware

./: CMakeLists.txt  README.md  build.sh
include/: boatDynamics.hpp  ingetrator.hpp  pidControl.hpp  pidController.hpp
src/: main.cpp  tuning_test.cpp
test/: pidControllerTests.cpp  tuning_test.cpp
